deploy/central/00-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: patch-monitor
